# mnemosyne

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
assets/: demo.tape
docs/: architecture.md
mnemosyne/: __init__.py  unified_index.py
tests/: test_unified_index.py
